--- a/src/gui/About.fxml
+++ b/src/gui/About.fxml
@@ -6,16 +6,20 @@
 <?import javafx.scene.text.Font?>
 
 
-<VBox prefHeight="160.0" prefWidth="196.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/16">
+<VBox prefHeight="204.0" prefWidth="352.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1">
    <children>
-      <Label prefHeight="28.0" prefWidth="63.0" text="About">
+      <Label text="About">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
+         <padding>
+            <Insets bottom="10.0" left="20.0" top="10.0" />
+         </padding>
       </Label>
-      <Label prefHeight="17.0" prefWidth="140.0" text="JavaFX application demo" />
+      <Label text="JavaFX application demo">
+         <padding>
+            <Insets left="20.0" />
+         </padding>
+      </Label>
    </children>
-   <padding>
-      <Insets bottom="10.0" left="20.0" top="10.0" />
-   </padding>
 </VBox>
